# libpahmm

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  libpahmm.pc.in  requirements.txt  setup.py
auxiliary/: python-pahmm-build.py
auxiliary/fake_c_headers/: README.md
dlib/: CMakeLists.txt
dlib/dlib/cmake_utils/: set_compiler_specific_options.cmake
dlib/dlib/cmake_utils/test_for_sse4/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/: cpahmm.h
paHMM-dist/: CMakeLists.txt  README.md  dlib
paHMM-dist/src/: pHMMt.cpp
paHMM-dist/src/core/: BandingEstimator.cpp  BandingEstimator.hpp  BioNJ.hpp  BrentOptimizer.cpp  CommandReader.cpp  CommandReader.hpp  Dictionary.cpp  Dictionary.hpp  FileLogger.cpp  FileLogger.hpp  FileParser.cpp  FileParser.hpp  HmmException.cpp  HmmException.hpp  IParser.hpp  Maths.cpp  Maths.hpp  Optimizer.cpp  PairHmmCalculationWrapper.cpp  PairHmmCalculationWrapper.hpp  PhylogeneticTree.cpp  SequenceElement.hpp  Sequences.cpp  Sequences.hpp
paHMM-dist/src/heuristics/: BandCalculator.cpp  BandCalculator.hpp  GuideTree.cpp  GuideTree.hpp  ModelEstimator.cpp  ModelEstimator.hpp  StateTransitionEstimator.cpp  StateTransitionEstimator.hpp  SubstitutionModelEstimator.cpp  SubstitutionModelEstimator.hpp  TripletAligner.cpp  TripletAligner.hpp
paHMM-dist/src/hmm/: DpMatrixFull.cpp  EvolutionaryPairHMM.cpp  EvolutionaryPairHMM.hpp  ForwardPairHMM.cpp  ForwardPairHMM.hpp  PairwiseHmmInsertState.cpp  PairwiseHmmStateBase.hpp  ViterbiPairHMM.cpp  ViterbiPairHMM.hpp
paHMM-dist/src/models/: AminoacidSubstitutionModel.cpp  AminoacidSubstitutionModel.hpp  HKY85Model.hpp  IndelModel.cpp  IndelModel.hpp  SubstitutionModelBase.cpp  SubstitutionModelBase.hpp
python/: paths.py  python-pahmm-build.py
python/pahmm/: __init__.py
src/: StreamParser.cpp  StreamParser.hpp  cpahmm.cpp  cpahmm_p.cpp  cpahmm_p.h
test/: main.cpp
test/samples/: genbank_sample.fasta  nonsense50x70.fasta  sample0.fasta.paHMM-Tree.distmat
tests/: README.md  generate_sample.py  initialize.py  tests.py
tests/paHMM-dist/: Makefile
tests/paHMM-dist/src/core/: BandingEstimator.cpp  BandingEstimator.hpp  Maths.cpp  Maths.hpp  Sequences.cpp
tests/samples/amino_acid/: 50x10.fasta  50x11.fasta  five.fasta  random_protein50.fasta  tiny_protein.fasta
tests/samples/nucleotide/: random_dna10.fasta  random_dna50.fasta  tiny_dna.fasta
